# VideoManagementPlatform

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
0build-debug/: CMakeCache.txt  Makefile  VideoManPlat.cbp  cmake_install.cmake
0build-debug/.cmake/api/v1/reply/: cache-v2-42c95a2d59d4d27fa25f.json  cmakeFiles-v1-642eef10d36d69f0c4b7.json  codemodel-v2-890f8b0889f89805138f.json  directory-src.cpumonitor-Debug-8094cb4317c0c9a25913.json  directory-src.iconhelper-Debug-63e9c6a67cc6c18fb5a1.json  directory-src.videopanel-Debug-a134c538da22555db449.json  index-2023-02-19T04-58-45-0364.json  target-CpuMonitor-Debug-fb0c529598a1c5d25608.json  target-CpuMonitor_autogen-Debug-f0ac0ac54341b8ab3120.json  target-IconHelper-Debug-42853e3ddaf36ff0ed74.json  target-IconHelper_autogen-Debug-e5db224855a8c545ec47.json  target-VideoManPlat-Debug-cbdf09077ebf4f4d70e6.json  target-VideoManPlat_autogen-Debug-fae047842037f873fc64.json  target-VideoPanel-Debug-7dcda12791225845aac4.json  target-VideoPanel_autogen-Debug-f389e98e2e8ff381e6dc.json  target-vidManPlatUi-Debug-55b69ac89d917356f6bf.json  target-vidManPlatUi_autogen-Debug-b77a364d075c8715e53b.json
0build-debug/src/: Makefile  cmake_install.cmake  resource.qrc.depends  vidManPlatUi.cbp
0build-debug/src/cpumonitor/: Makefile  cmake_install.cmake  cpumonitor.cbp
0build-debug/src/cpumonitor/cpumonitor_autogen/EWIEGA46WW/: moc_cpumonitor.cpp  moc_cpumonitor.cpp.d
0build-debug/src/iconhelper/: Makefile  cmake_install.cmake  iconhelper.cbp
0build-debug/src/iconhelper/iconhelper_autogen/: mocs_compilation.cpp
0build-debug/src/iconhelper/iconhelper_autogen/EWIEGA46WW/: moc_iconhelper.cpp  moc_iconhelper.cpp.d
0build-debug/src/vidManPlatUi_autogen/EWIEGA46WW/: moc_sevimanplat.cpp  moc_sevimanplat.cpp.d
0build-debug/src/vidManPlatUi_autogen/include/: ui_sevimanplat.h
0build-debug/src/videopanel/: Makefile  cmake_install.cmake  videopanel.cbp
0build-linux/: CMakeCache.txt  CTestTestfile.cmake  Makefile  VideoManPlat.cbp  cmake_install.cmake  qrc_qss.cpp
0build-linux/src/: Makefile  cmake_install.cmake  vidManPlatUi.cbp
0build-linux/src/addVideoDevice/: Makefile  addVideo.cbp  cmake_install.cmake
0build-linux/src/addVideoDevice/addVideo_autogen/: mocs_compilation.cpp
0build-linux/src/cpuMonitor/: CpuMonitor.cbp  Makefile  cmake_install.cmake
0build-linux/src/cpuMonitor/CpuMonitor_autogen/: mocs_compilation.cpp
0build-linux/src/iconHelper/: IconHelper.cbp  Makefile  cmake_install.cmake
0build-linux/src/playFFmpeg/: Makefile  PlayFFmpeg.cbp  cmake_install.cmake
0build-linux/src/vidManPlatUi_autogen/: mocs_compilation.cpp
0build-linux/src/vidManPlatUi_autogen/EWIEGA46WW/: moc_sevimanplat.cpp  moc_sevimanplat.cpp.d
0build-linux/src/vidManPlatUi_autogen/include/: ui_sevimanplat.h
0build-linux/src/videoPanel/: Makefile  VideoPanel.cbp  cmake_install.cmake
0build-linux/test/: Makefile  cmake_install.cmake  test_ffmpeg.cbp
0build-mac/: CMakeCache.txt  CTestTestfile.cmake  Makefile  VideoManPlat.cbp  cmake_install.cmake  qrc_qss.cpp
0build-mac/.cmake/api/v1/reply/: cache-v2-82a1b61055e29f761a83.json  (+21 more)
0build-mac/src/: Makefile  cmake_install.cmake  resource.qrc.depends  vidManPlatUi.cbp
0build-mac/src/addVideoDevice/: Makefile  addVideo.cbp  cmake_install.cmake
0build-mac/src/cpuMonitor/: CpuMonitor.cbp  Makefile  cmake_install.cmake
0build-mac/src/iconHelper/: IconHelper.cbp  Makefile  cmake_install.cmake
0build-mac/src/playFFmpeg/: Makefile  PlayFFmpeg.cbp  cmake_install.cmake
0build-mac/src/vidManPlatUi_autogen/EWIEGA46WW/: moc_sevimanplat.cpp  moc_sevimanplat.cpp.d
0build-mac/src/vidManPlatUi_autogen/include/: ui_sevimanplat.h
0build-mac/src/videoPanel/: Makefile  VideoPanel.cbp  cmake_install.cmake
0build-mac/src/videoPanel/VideoPanel_autogen/: mocs_compilation.cpp
0build-mac/test/: Makefile  cmake_install.cmake  test_ffmpeg.cbp
0build-mac/test/test_ffmpeg_autogen/: moc_predefs.h
0build-windows/: CMakeCache.txt  Makefile  VideoManPlat.cbp  cmake_install.cmake  qrc_qss.cpp
0build-windows/src/: Makefile  cmake_install.cmake  vidManPlatUi.cbp
0build-windows/src/addVideoDevice/: Makefile  addVideo.cbp  cmake_install.cmake
0build-windows/src/iconHelper/: IconHelper.cbp  Makefile  cmake_install.cmake
0build-windows/src/playFFmpeg/: Makefile  PlayFFmpeg.cbp  cmake_install.cmake
0build-windows/src/playFFmpeg/PlayFFmpeg_autogen/: mocs_compilation.cpp
0build-windows/src/utils/: Makefile  cmake_install.cmake  utils.cbp
0build-windows/src/vidManPlatUi_autogen/EWIEGA46WW/: moc_sevimanplat.cpp
0build-windows/src/vidManPlatUi_autogen/include/: ui_sevimanplat.h
0build-windows/src/videoPanel/: Makefile  VideoPanel.cbp  cmake_install.cmake
cmake/: 3drparty.cmake  findBoost.cmake  findFFmpeg.cmake  findQt5.cmake  findYaml.cmake
conf/: LOG4cPlus.conf  videoListConf.json
doc/: installFFmpeg.md  其他.md  开发笔记.md  视频监控.md
lib/: IconHelper.lib  PlayFFmpeg.lib  VideoPanel.lib  addVideo.lib
lib/Debug/: IconHelper.lib  VideoPanel.lib
scripts/: run.sh
src/: CMakeLists.txt  dataType.h  resource.qrc  sevimanplat.cpp  sevimanplat.h  sevimanplat.ui  sevimanplat1.ui  sevimanplat_1.cpp  sevimanplat_2.cpp  sevimanplat_4.cpp
src/addVideoDevice/: CMakeLists.txt  addVideo.ui  addvideo.cpp  addvideo.h  ipaddress.cpp  ipaddress.h
src/cpuMonitor/: CMakeLists.txt  jqcpumonitor.cpp
src/cpumonitor/: CMakeLists.txt  cpumonitor.h  cpumonitor.inc  jqcpumonitor.cpp
src/iconHelper/: CMakeLists.txt  iconhelper.cpp
src/iconhelper/: CMakeLists.txt
src/playFFmpeg/: CMakeLists.txt  ffmpeg.cpp  ffmpeg.h  ffmpeghead.h
src/qss/: ._flatgray  ._font  ._icon  flatgray.css  lightblue.css
src/qss/lightblue/: ._Thumbs.db  Thumbs.db
src/utils/: CMakeLists.txt  Json.cpp  Json.h  iLOG.cpp  iLOG.hpp  iLogger.cpp  iLogger.h  jqcpumonitor.cpp  log.cpp  log.hpp  singleton.hpp  utils.cpp  utils.hpp  yamlconfig.cpp  yamlconfig.hpp
src/videoPanel/: CMakeLists.txt  videobox.cpp  videopanel.cpp  videopanel.h
src/videopanel/: CMakeLists.txt  videopanel.cpp
test/: CMakeLists.txt  testFFmpeg.cpp
(+134 files in other folders)
